# dsa5-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/character/: analysis.rs  data.rs  mod.rs
src/ui/: analysis_view.rs  character_view.rs  file_dialog.rs  mod.rs
